# FleetFill

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: development-process.md
packaging/: FleetFill.iss  FleetFill.spec
research/: README.md  ui-first-findings.md
research/tests/: test_ets2_batch_controller.py  test_ets2_capacity_garage_finder.py  test_ets2_dealer_map_translation.py  test_ets2_dealer_marker_probe.py  test_ets2_garage_pan_probe.py  test_ets2_home_ui.py  test_ets2_truck_ui.py  test_finalize_one_plus_one_validation.py  test_verify_fill_batch_save.py
research/tools/: decrypt_scs_file.py  ets2_batch_controller.py  ets2_dealer_icon_detector.py  ets2_direct_capture_probe.py  ets2_garage_icon_detector.py  ets2_truck_ui_dry_run.py  ets2_ui_ack_purchase_prompt_probe.py  ets2_ui_choose_truck_garage_probe.py  ets2_ui_confirm_driver_to_truck_probe.py  ets2_ui_confirm_hire_probe.py  ets2_ui_confirm_truck_purchase_probe.py  (+43 more)
scripts/: build-installer.ps1  build-personal-beta.ps1  run-fleetfill-live-test.ps1  run-fleetfill-main-five-validation.ps1  run-fleetfill-main-three-validation.ps1  run-fleetfill-main-two-validation.ps1  run-fleetfill-main-validation.ps1  run-fleetfill-personal-beta.ps1  run-fleetfill-validation.ps1  run-fleetfill.ps1  run-main-profile-preflight.ps1
tests/: test_app_domain.py  test_app_ui.py  test_application.py  test_preflight.py  test_process_supervisor.py  test_profile_safety.py  test_runner.py  test_runtime.py  test_validation.py  test_worker.py
(+19 files in other folders)
