[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fleetfill"
version = "0.1.0"
description = "Guarded ETS2 garage-filling automation"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0,<3",
  "Pillow>=11,<13",
  "PySide6==6.10.1",
]

[project.scripts]
fleetfill = "fleetfill.application:main"

[project.urls]
Repository = "https://github.com/hieu04/FleetFill"
Issues = "https://github.com/hieu04/FleetFill/issues"

[tool.setuptools.packages.find]
where = ["src"]
